# mindstudio-skills

./: .gitmodules  README.md  pyproject.toml  run.py
ascend-profiler-db-explorer/: SKILL.md
cluster-fast-slow-rank-detector/: SKILL.md
github-raw-fetch/: SKILL.md
resources/configs/default/: README.md  config.llms.yml  config.mcp.json
resources/configs/default/agents/: general.yml
scripts/: build_whl.sh
src/msagent/: __init__.py  agent.py  llm.py  py.typed  tools.py  tui.py
src/msagent/agents/: __init__.py  context.py  deep_agent.py  factory.py  react_agent.py  state.py
src/msagent/checkpointer/: __init__.py  base.py  factory.py
src/msagent/checkpointer/impl/: memory.py  sqlite.py
src/msagent/cli/bootstrap/: app.py  chat.py  initializer.py  legacy.py  server.py  timer.py  webapp.py
src/msagent/cli/builders/: __init__.py  message.py
src/msagent/cli/completers/: __init__.py  reference.py  router.py
src/msagent/cli/core/: context.py  session.py
src/msagent/cli/dispatchers/: __init__.py  commands.py  messages.py
src/msagent/cli/handlers/: __init__.py  agents.py  approve.py  bash.py  compress.py  graph.py  interrupts.py  mcp.py  memory.py  models.py  replay.py  resume.py  skills.py  todo.py  tools.py
src/msagent/cli/resolvers/: __init__.py  file.py  image.py
src/msagent/cli/theme/: __init__.py  console.py  registry.py  tokyo_day.py  tokyo_night.py
src/msagent/cli/ui/: prompt.py  renderer.py  shared.py
src/msagent/configs/: __init__.py  agent.py  checkpointer.py  llm.py  mcp.py  registry.py  sandbox.py  utils.py
src/msagent/core/: constants.py  logging.py  settings.py
src/msagent/llms/: factory.py
src/msagent/mcp/: __init__.py  cache.py  client.py  factory.py  loader.py  registry.py  session.py  tool.py
src/msagent/middlewares/: __init__.py  approval.py  compress_tool_output.py  dynamic_prompt.py  pending_tool_result.py  return_direct.py  sandbox.py  token_cost.py
src/msagent/prompts/: system_prompt.txt
src/msagent/sandboxes/: __init__.py  constants.py  factory.py  serialization.py  worker.py
src/msagent/skills/: factory.py
src/msagent/tools/: factory.py
src/msagent/utils/: compression.py  cost.py  file.py  rate_limiter.py  render.py  version.py
tests/: test_agent.py  test_cli_bootstrap.py  test_config_registry.py  test_legacy_defaults.py  test_llm.py  test_package_imports.py  test_prompt_usage.py  test_renderer_welcome.py  test_skills_handler.py  test_tool_compat.py  test_tools.py
(+21 files in other folders)
